<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="11dp"
  tools:context=".MainActivity">

  <Button
    android:id="@+id/register"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/outlined_button_style"
    android:fontFamily="@font/barlow_condensed_bold"
    android:text="@string/register"
    android:textColor="@color/colorFilled"
    android:typeface="normal"
    app:layout_constraintBottom_toTopOf="@+id/tvGuest"
    app:layout_constraintEnd_toStartOf="@+id/login"
    app:layout_constraintStart_toStartOf="parent" />

  <Button
    android:id="@+id/login"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/solid_button_style"
    android:fontFamily="@font/barlow_condensed_bold"
    android:text="@string/login"
    android:textColor="@color/colorUnFilled"
    android:typeface="normal"
    app:layout_constraintBottom_toTopOf="@+id/tvGuest"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/register"
    app:strokeColor="@color/colorFilled"
    app:strokeWidth="1dp" />

  <TextView
    android:id="@+id/tvGuest"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/guest"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <TextView
    android:id="@+id/tvLogo"
    android:layout_width="242dp"
    android:layout_height="44dp"
    android:layout_marginBottom="180dp"
    android:fontFamily="@font/barlow_regular"
    android:text="@string/logo_info"
    android:textAlignment="center"
    app:layout_constraintBottom_toTopOf="@+id/login"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent" />

  <ImageView
    android:id="@+id/ivLogo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:contentDescription="@string/logo_description"
    app:layout_constraintBottom_toTopOf="@+id/tvLogo"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.873"
    app:srcCompat="@drawable/splash_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>