<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="11dp"
  tools:context=".MainUnlogActivity">

  <Button
    android:id="@+id/closeBtn"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="@android:color/transparent"
    android:clickable="true"
    android:drawableEnd="@drawable/ic_close"
    android:focusable="true"
    app:layout_constraintBottom_toTopOf="@+id/textView3"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/textView3"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:layout_marginBottom="8dp"
    android:fontFamily="@font/futura_condensed_bold"
    android:lineSpacingExtra="-15sp"
    android:text="@string/unlogged_title"
    android:textAlignment="center"
    android:textAllCaps="true"
    android:textColor="@color/colorFilled"
    android:textSize="87sp"
    android:typeface="normal"
    app:layout_constraintBottom_toTopOf="@+id/logoIv"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <ImageView
    android:id="@+id/logoIv"
    android:layout_width="0dp"
    android:layout_height="300dp"
    android:layout_marginTop="130dp"
    android:layout_marginBottom="30dp"
    android:contentDescription="@string/logo_description"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.39"
    app:srcCompat="@drawable/unlogged_img" />

  <TextView
    android:id="@+id/regTitleTv"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:fontFamily="@font/barlow_condensed_bold"
    android:text="@string/register_title"
    android:textAlignment="center"
    android:textColor="@color/colorFilled"
    android:textSize="24sp"
    android:typeface="normal"
    app:layout_constraintBottom_toTopOf="@+id/tvLogo"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    tools:text="@string/register_title" />

  <TextView
    android:id="@+id/tvLogo"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:fontFamily="@font/barlow_regular"
    android:text="@string/unlogged_info"
    android:textAlignment="center"
    android:textSize="16sp"
    android:typeface="normal"
    app:layout_constraintBottom_toTopOf="@+id/register"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <Button
    android:id="@+id/register"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/outlined_button_style"
    android:fontFamily="@font/barlow_condensed_bold"
    android:text="@string/register"
    android:textColor="@color/colorFilled"
    android:textSize="16sp"
    android:typeface="normal"
    app:layout_constraintBottom_toTopOf="@+id/tvGuest"
    app:layout_constraintEnd_toStartOf="@+id/login"
    app:layout_constraintStart_toStartOf="parent" />

  <Button
    android:id="@+id/login"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/solid_button_style"
    android:fontFamily="@font/barlow_condensed_bold"
    android:text="@string/login"
    android:textColor="@color/colorUnFilled"
    android:textSize="16sp"
    android:typeface="normal"
    app:layout_constraintBottom_toTopOf="@+id/tvGuest"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/register"
    app:strokeColor="@color/colorFilled"
    app:strokeWidth="1dp" />

  <TextView
    android:id="@+id/tvGuest"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/guest"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>