<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".authentication.RegistrationActivity"
  android:fillViewport="true">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="20dp"
    android:paddingTop="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="20dp">

    <ImageView
      android:id="@+id/imageView"
      android:layout_width="364dp"
      android:layout_height="53dp"
      android:contentDescription="@string/register_image"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/sneak_logo" />

    <TextView
      android:id="@+id/regTitleTv"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:fontFamily="@font/barlow_condensed_bold"
      android:text="@string/register_title"
      android:textAlignment="center"
      android:textColor="@color/colorFilled"
      android:textSize="24sp"
      android:typeface="normal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView"
      tools:text="@string/register_title" />

    <TextView
      android:id="@+id/regInfoTv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:fontFamily="@font/barlow_regular"
      android:text="@string/register_info"
      android:textAlignment="center"
      android:typeface="normal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/regTitleTv"
      tools:text="@string/register_info" />

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/type_input_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/regInfoTv">

      <EditText
        android:id="@+id/email_edt_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="@font/barlow_regular"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        android:typeface="normal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/type_input_pass"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/type_input_email">

      <EditText
        android:id="@+id/pass_edt_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="@font/barlow_regular"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:typeface="normal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/textInputFirstName"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="5dp"
      app:layout_constraintEnd_toStartOf="@+id/textInputLastName"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/type_input_pass">

      <EditText
        android:id="@+id/firstname_edt_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="@font/barlow_regular"
        android:hint="@string/first_name"
        android:inputType="text"
        android:textSize="18sp"
        android:typeface="normal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/textInputLastName"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="5dp"
      android:layout_marginTop="10dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/textInputFirstName"
      app:layout_constraintTop_toBottomOf="@+id/type_input_pass">

      <EditText
        android:id="@+id/lastname_edt_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="@font/barlow_regular"
        android:hint="@string/last_name"
        android:inputType="text"
        android:textSize="18sp"
        android:typeface="normal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/TextInputNationality"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textInputLastName">

      <EditText
        android:id="@+id/nationality_edt_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="@font/barlow_regular"
        android:hint="@string/nationality_Et"
        android:inputType="text"
        android:textSize="18sp"
        android:typeface="normal" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
      android:id="@+id/preferenceTv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:text="@string/preferred_products"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/TextInputNationality" />

    <RadioGroup
      android:id="@+id/radioGroup"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:layout_marginBottom="10dp"
      android:orientation="horizontal"
      app:layout_constraintBottom_toTopOf="@+id/notifyCB"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/preferenceTv">

      <RadioButton
        android:id="@+id/rbMens"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        android:background="@drawable/radio_button_pressed"
        android:button="@null"
        android:drawableStart="@drawable/radio_button_selected"
        android:fontFamily="@font/barlow_regular"
        android:paddingStart="50dp"
        android:text="@string/register_gender_men_s"
        android:textSize="16sp"
        android:typeface="normal"
        tools:ignore="RtlSymmetry" />

      <RadioButton
        android:id="@+id/rbWomens"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@drawable/radio_button_pressed"
        android:button="@null"
        android:drawableStart="@drawable/radio_button_selected"
        android:fontFamily="@font/barlow_regular"
        android:paddingStart="35dp"
        android:text="@string/register_gender_women_s"
        android:textSize="16sp"
        android:typeface="normal"
        tools:ignore="RtlSymmetry" />

    </RadioGroup>

    <com.google.android.material.checkbox.MaterialCheckBox
      android:id="@+id/notifyCB"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="5dp"
      android:fontFamily="@font/barlow_regular"
      android:text="@string/register_notify"
      android:textAlignment="textStart"
      android:textColor="@color/colorTextLight"
      android:textSize="14sp"
      android:typeface="normal"
      app:layout_constraintBottom_toTopOf="@+id/activity_main_link"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
      android:id="@+id/activity_main_link"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="20dp"
      android:layout_marginBottom="10dp"
      android:fontFamily="@font/barlow_regular"
      android:text="@string/register_hlink"
      android:textAlignment="center"
      android:textSize="14sp"
      android:typeface="normal"
      app:layout_constraintBottom_toTopOf="@+id/signup_btn"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/notifyCB" />

    <Button
      android:id="@+id/signup_btn"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="10dp"
      android:background="@drawable/solid_button_style"
      android:fontFamily="@font/barlow_condensed_bold"
      android:paddingTop="10dp"
      android:paddingBottom="10dp"
      android:shadowRadius="0"
      android:text="@string/signup_Tv"
      android:textColor="@color/colorUnFilled"
      android:textSize="16sp"
      android:typeface="normal"
      app:layout_constraintBottom_toTopOf="@+id/login_btn"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/activity_main_link" />

    <TextView
      android:id="@+id/login_btn"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="5dp"
      android:fontFamily="@font/barlow_regular"
      android:text="@string/login_btn"
      android:textAllCaps="false"
      android:textSize="14sp"
      android:typeface="normal"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/textView4"
      app:layout_constraintTop_toBottomOf="@+id/signup_btn" />

    <TextView
      android:id="@+id/textView4"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="5dp"
      android:layout_marginTop="10dp"
      android:fontFamily="@font/barlow_regular"
      android:text="@string/already_a_member"
      android:textAlignment="textEnd"
      android:textSize="14sp"
      android:typeface="normal"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/login_btn"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/signup_btn" />

    <ProgressBar
      android:id="@+id/progressBar"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />


  </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>